as/rl - bugfix - disallow badges and questions from overlapping

--- a/app/assets/stylesheets/partials/_body.scss
+++ b/app/assets/stylesheets/partials/_body.scss
@@ -150,7 +150,7 @@ h2 {
   .question-link {
     position: absolute;
     left: $question-image-width;
-    right: 50px;
+    right: 100px;
   }
 
   .checkmark {
